--- a/views/vistaPares.pug
+++ b/views/vistaPares.pug
@@ -7,8 +7,8 @@ html
       - var n = 1;
       while n <= 50
         if n % 2 == 0
-          h1 #{n} soy Par!
+          p #{n} soy Par!
           - n= n + 1
         else
-          h1 #{n} soy Impar!
+          p #{n} soy Impar!
           - n= n + 1
